# rag_mcp

./: .env  .env.example  .gitignore  LICENSE  README.md  README_en.md  examples.py  main.py  pyproject.toml  start.sh
api/: auth.py  mcp.py  search.py  upload.py  vectorize.py
core/: schemas.py  services.py  storage.py  vectorize.py
database/: models.py
docker/: .env.example  docker-compose.yml
front/client/: README.md  eslint.config.mjs  package-lock.json  package.json
front/client/app/: layout.tsx  page.tsx
front/client/app/dashboard/: layout.tsx  page.tsx
front/client/app/login/: page.tsx
front/client/components/: ShaderViewer.tsx  icons.tsx
front/client/services/: auth.ts  config.ts  dashboard.ts  file.ts  knowledge.ts  mcp.ts  vectorize.ts
mcp/: client.py
mcp_server/: README.md  README_en.md  SUMMARY.md  __init__.py
mcp_server/core/: __init__.py  config.py  rag_handler.py  schemas.py
mcp_server/docs/: PRD.md  RAG_MCP_PRD.md  SUMMARY.md
mcp_server/server/: __init__.py  mcp_server.py
scripts/: create_user.py
test/: README.md  README_en.md  sample_ai_document.txt  test_ai_document.txt  test_api_status.py  test_cli.py  test_complete_system.py  test_content_extraction.py  test_delete.py  test_file_content.py  test_mcp_components.py  test_mcp_detailed.py  test_mcp_simple.py  test_performance.py  test_real_files.py  test_simple.py  test_summary.py  test_tech_document.txt  test_vectorization_status.py  test_vectorize_clean.py  test_vectorize_mock.py
upload/: b9cbbc03-6608-4b17-95e5-281a5a8f4e83.docx
utils/: __init__.py  jwt.py  logger.py
(+7 files in other folders)
